--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "server": "nodemon src/index.js",
 		"start": "node src/index.js"
   },
+  "type":"module",
   "keywords": [],
   "author": "",
   "license": "ISC",
