--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,7 @@
 PORT=8000
 MONGO_DB_URI=mongodb+srv://ibaraaouche:dSLEEn9OBE7oRmG2@cluster0.sg7htq8.mongodb.net/mern-chat?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=x8P2ybbkrP/D11WH/231um4dxubLNKyO5oag9blSD5o=
+NODE_ENV=development
 
 # ibaraaouche
 # dSLEEn9OBE7oRmG2
