--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"server": "nodemon backend/index.js",
-		"start": "node backend/index.js",
+		"server": "nodemon backend/src/index.js",
+		"start": "node backend/src/index.js",
 		"build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
 	},
 	"type": "module",
